# ComfyUI-DazzleKSampler

./: .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  version.py
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  publish-to-registry.yml
ComfyUI_DazzleKSampler/: __init__.py  __main__.py
docs/wiki/: Configuration-Tips.md  Euler-vs-Euler-Ancestral.md  Home.md  Noise-Passthrough.md  Sampler-Reference.md  Scheduler-Reference.md
private/claude/commits/: commit_v0.1.0_initial-template.txt
py/beta/: _latent_noise_protocol.py  daznoise_adapter.py  rk_noise_sampler_beta.py  rk_sampler_beta.py  samplers.py  tau_sampler.py
tests/: conftest.py  test_daznoise_adapter.py  test_latent_noise_protocol.py  test_version.py
tests/checklists/: v0.1.1-alpha__Fix__seed-minus-2-dual-role-bug.md  v0.1.2-alpha__Feature__explicit-latent-role-widget.md  v0.1.3-alpha__Fix__seed-widget-and-determinism-docs.md  v0.1.4-alpha__Feature__noise_all-and-daznoise.md
tests/one-offs/: probe_noise_seed_per_step_interaction.py
web/: dazzle_ksampler.js
