[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-dazzle-ksampler"
version = "0.1.0"
description = "Enhanced KSampler for ComfyUI with SmartResCalc noise passthrough and DazzleCommand integration. Based on RES4LYF's ClownsharKSampler."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleNodes/ComfyUI-DazzleKSampler"
Repository = "https://github.com/DazzleNodes/ComfyUI-DazzleKSampler"
Issues = "https://github.com/DazzleNodes/ComfyUI-DazzleKSampler/issues"

[project.scripts]
ComfyUI-DazzleKSampler = "ComfyUI_DazzleKSampler.cli:main"

[tool.setuptools.dynamic]
version = {attr = "ComfyUI_DazzleKSampler._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["ComfyUI_DazzleKSampler", "ComfyUI_DazzleKSampler.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "ComfyUI_DazzleKSampler/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/DazzleNodes/ComfyUI-DazzleKSampler"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
